--- a/app/src/main/res/layout/activity_doctor_dashboard.xml
+++ b/app/src/main/res/layout/activity_doctor_dashboard.xml
@@ -18,6 +18,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/logOut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnViewTimeslot"
+        app:layout_constraintVertical_bias="0.235" />
+
+    <Button
         android:id="@+id/btnViewPatients"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
